[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Sprites/needle_aim.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Shooter.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Shooter.gd" type="Script" id=3]
[ext_resource path="res://Enemies/Explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/Enemybullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://Particles/Shooter.tres" type="Material" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 8 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="Shooter" type="Area2D" groups=["chaser"]]
collision_layer = 4
collision_mask = 2
script = ExtResource( 3 )
cooldown_time = 4.0
explosion = ExtResource( 4 )
bullet = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 2
region_enabled = true
region_rect = Rect2( 0, 0, 32, 16 )

[node name="NedleeSprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="BulletPosition" type="Position2D" parent="NedleeSprite"]
position = Vector2( 0, -3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Init" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ChargingParticle" type="Particles2D" parent="."]
emitting = false
amount = 4
lifetime = 0.5
fract_delta = false
local_coords = false
process_material = ExtResource( 6 )

[connection signal="area_entered" from="." to="." method="_on_Shooter_area_entered"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
[connection signal="timeout" from="Init" to="." method="_on_Init_timeout"]
